@@ -1,3 +1,10 @@
+2010-05-16  Carsten Dominik  <carsten.dominik@gmail.com>
+
+	* org.texi (Special symbols): Document the key to dislpay
+	entities as UTF8 characters.
+	(In-buffer settings): Document the new keywords for pretty
+	entity display.
+
 2010-05-15  Carsten Dominik  <carsten.dominik@gmail.com>
 
 	* org.texi (Tables in LaTeX export): Document the multicolumn
